2006.04.26: David Nichols
	* made assignments such as 
	  my ($a, $b, $c) = (1, 2, 3)
	  finally legal...

2006.04.25: David Nichols
	* implemented parseBase64StringToString(), made BinaryObject::getPtr()
	  return a const void *
	* fixed a bug in HTTPClient where exceptions were not being thrown for
	  HTTP response codes indicating an error

2006.04.21: David Nichols
	* fixed a race condition on platforms without atomic reference counting
	  operations related to the SMP cache invalidation optimization

2006.04.19: David Nichols
	* fixed some oracle and tibae compile bugs
	* use umem on Solaris for memory allocation if available
	* fixed some sybase/mssql compile bugs on Solaris
	* fixed an obscure bug parsing block comments
	* fixed a reference-counting bug and a static memory leak in object 
	  method references

2006.04.13: David Nichols
	* added new DBI methods: get_server_version and get_client_version: both
	  functions are optional and return driver-specific version information
	* added corresponding Datasource methods:
		- Datasource::getServerVersion()
		- Datasource::getClientVersion()

2006.04.12: David Nichols
	* more documentation updates
	* implemented new File class methods: readu1(), readu2(), readu4(), 
	  readi8(), readu2LSB(), readu4LSB(), readi8LSB(), writeu1(), writeu2(),
	  writeu4(), writeu2LSB(), writeu4LSB(), writei8(), writei8LSB()
	* implemented new Socket class methods: Socket::recvu1(), 
	  Socket::recvu2(), Socket::recvu4(), Socket::recvu2LSB(),
	  Socket::recvu4LSB()

2006.04.11: David Nichols
	* massive documentation updates

2006.04.09: David Nichols
	* implemented callback support for sortDescending() and 
	  sortDescendingStable()
	* implemented reverse() for strings and lists (also UTF-8 strings)

2006.04.08: David Nichols
	* implemented function and object method call references, updated 
	  sort*(), min(), max() and set_signal_handler() to take call references

2006.04.07: David Nichols